--- a/templates/bisection.html
+++ b/templates/bisection.html
@@ -1,26 +1,35 @@
-<!-- bisection.html -->
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Bisection Method</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='method_styles.css') }}">
 </head>
-
 <body>
-    <h1>Bisection Method</h1>
-    <form action="/bisection" method="post">
-        <label>Function f(x): </label>
-        <input type="text" name="function" required><br>
-        <label>Left Endpoint (a): </label>
-        <input type="number" step="any" name="a" required><br>
-        <label>Right Endpoint (b): </label>
-        <input type="number" step="any" name="b" required><br>
-        <label>Iterations: </label>
-        <input type="number" name="iterations" required><br>
-        <label>Decimal Places: </label>
-        <input type="number" name="decimal_places" required><br>
-        <input type="submit" class="submit-btn" value="Calculate">
-    </form>
+    <div class="container">
+        <h1>Bisection Method</h1>
+        <form action="/bisection" method="post">
+            <div class="form-group">
+                <label>Function f(x):</label>
+                <input type="text" name="function" required>
+            </div>
+            <div class="form-group">
+                <label>Left Endpoint (a):</label>
+                <input type="number" step="any" name="a" required>
+            </div>
+            <div class="form-group">
+                <label>Right Endpoint (b):</label>
+                <input type="number" step="any" name="b" required>
+            </div>
+            <div class="form-group">
+                <label>Iterations:</label>
+                <input type="number" name="iterations" required>
+            </div>
+            <div class="form-group">
+                <label>Decimal Places:</label>
+                <input type="number" name="decimal_places" required>
+            </div>
+            <input type="submit" class="submit-btn" value="Calculate">
+        </form>
+    </div>
 </body>
-
 </html>
