--- a/templates/newton.html
+++ b/templates/newton.html
@@ -1,21 +1,30 @@
-<!-- newton.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Newton's Method</title>
-</head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='method_styles.css') }}"></head>
 <body>
-    <h1>Newton's Method</h1>
-    <form action="/newton" method="post">
-        <label>Function f(x): </label>
-        <input type="text" name="function" required><br>
-        <label>Initial Guess x0: </label>
-        <input type="number" step="any" name="x0" required><br>
-        <label>Iterations: </label>
-        <input type="number" name="iterations" required><br>
-        <label>Decimal Places: </label>
-        <input type="number" name="decimal_places" required><br>
-        <input type="submit" class="submit-btn" value="Calculate">
-    </form>
+    <div class="container">
+        <h1>Newton's Method</h1>
+        <form action="/newton" method="post">
+            <div class="form-group">
+                <label>Function f(x):</label>
+                <input type="text" name="function" required>
+            </div>
+            <div class="form-group">
+                <label>Initial Guess x0:</label>
+                <input type="number" step="any" name="x0" required>
+            </div>
+            <div class="form-group">
+                <label>Iterations:</label>
+                <input type="number" name="iterations" required>
+            </div>
+            <div class="form-group">
+                <label>Decimal Places:</label>
+                <input type="number" name="decimal_places" required>
+            </div>
+            <input type="submit" class="submit-btn" value="Calculate">
+        </form>
+    </div>
 </body>
 </html>
